#2297: Layout issues on small screens - fixed permanent scroll bars in mini cart

--- a/src/main/java/assets/css/cartSlider.css
+++ b/src/main/java/assets/css/cartSlider.css
@@ -127,7 +127,7 @@
 	margin: 0;
 	padding: 0;
 	max-height: 250px;
-	overflow: scroll;
+	overflow: auto;
 }
 
 #cartSliderItemsWrap li {
